--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4378,4 +4378,17 @@
     <string name="cell_broadcast_settings">Cell broadcasts</string>
     <!-- Cell Broadcast settings description [CHAR LIMIT=100] -->
     <string name="cell_broadcast_settings_summary">Select the types of emergency alerts to display.</string>
+<!-- **** GANBAROU ADDITIONS STARTS **** -->
+    <!-- TabletUI patch Original Patch by Scott Brady <sbradymobile@gmail.com> -->
+    <string name="status_bar_tablet_title">Tablet Tweaks</string>
+    <string name="tablet_ui_title">Tablet UI</string>
+    <!-- Navigation bar position dialog title -->
+    <string name="nav_pos_dialog_title">Navigation bar position</string>
+    <!-- Navigation bar position option -->
+    <string name="nav_pos_option_title">Select your prefered navigation bar position</string>
+    <!-- Navigation bar position default -->
+    <string name="nav_pos_default">center</string>
+    <!-- Navigation bar help title -->
+    <string name="navigation_bar_help_title">Navigation bar help</string>
+<!-- **** GANBAROU ADDITIONS END **** -->
 </resources>
