Changelog V4.00 Initial: first build based on CM10.2. Feature: Ganbarou wallpaper Feature: Ganbarou bootanimation Feature: Ganbarou About screen (Ganbarou changelog, Ganbarou version, Ganbarou easter egg) Feature: Reboot and Recovery on top level of power menu
Change-Id: I5165ce46da5f38628fee078b1f02acdde5fce924

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4534,4 +4534,14 @@
 
     <!-- Text to display in regulatory info screen (from device overlay). -->
     <string name="regulatory_info_text"></string>
+<!-- **** GANBAROU_PATCH_START **** -->
+    <!-- Navigation bar position dialog title -->
+    <string name="nav_pos_dialog_title">Navigation bar position</string>
+    <!-- Navigation bar position option -->
+    <string name="nav_pos_option_title">Select your prefered navigation bar position</string>
+    <!-- Navigation bar position default -->
+    <string name="nav_pos_default">center</string>
+    <!-- Navigation bar help title -->
+    <string name="navigation_bar_help_title">Navigation bar help</string>
+<!-- **** GANBAROU_PATCH_END **** -->
 </resources>
